--- a/install
+++ b/install
@@ -23,7 +23,7 @@ cd build
 echo
 echo "###############################################################"
 echo "#                                                             #"
-echo "#                        Build Hard-FPU		            #"
+echo "#                        Build ARM              	            #"
 echo "#                                                             #"
 echo "###############################################################"
 echo ""
@@ -43,8 +43,51 @@ make install
 
 echo "[Hardfloat] >>>> Build Hard-FPU Finisched <<<<"
 
-mv $PREFIX/bin/enigmalight $PREFIX/bin/enigmalight_oe20_hf
+mv $PREFIX/bin/enigmalight $PREFIX/bin/enigmalight_arm
 
+echo
+echo "###############################################################"
+echo "#                                                             #"
+echo "#                        Build MIPS              	            #"
+echo "#                                                             #"
+echo "###############################################################"
+echo ""
+echo ""
 
+set -e
+BUILD_DIR=$(pwd)
+PREFIX=${BUILD_DIR}"/usr/"
 
+#check if compiler exists
+clear
+
+OE_PATH=/home/socma/versetc/boxmake/simple3/support/toolchains/arm_dream/bin
+printf "Set Compiler Path... '"${OE_PATH}"'\n\n"
+export PATH=$PATH:$OE_PATH
+
+HOST=arm-newnigma2-linux-gnueabihf
+GCC=${HOST}"-gcc"
+GPP=${HOST}"-g++"
+CC=${GCC}
+CXX=${GPP}
+
+CPPFLAGS="-mhard-float"
+
+cd build
+
+sleep 1
+
+echo "[Hardfloat] Clean directory..."
+make clean -i
+
+echo "[Hardfloat] Configure..."
+./configure CC=${CC} CXX=${CXX} --host=${HOST} CPPFLAGS="${CPPFLAGS}" --prefix=${PREFIX}
+
+echo "[Hardfloat] Make..."
+make  -j2
+make install
+
+echo "[Hardfloat] >>>> Build Hard-FPU Finisched <<<<"
+
+mv $PREFIX/bin/enigmalight $PREFIX/bin/enigmalight_mips
 exit 0;
